Fix bug with icons not expanding AddEntry progress bar segment on iOS

--- a/src/components/css/AddEntry.module.css
+++ b/src/components/css/AddEntry.module.css
@@ -12,7 +12,7 @@
 
 .header > * {
 	display: flex;
-	flex: 1;
+	flex: 1 1 auto;
 	align-items: center;
 	justify-content: center;
 	padding: 0 1rem;
